--- a/static/style.css
+++ b/static/style.css
@@ -73,6 +73,10 @@ button:hover{
     margin: auto;
 }
 
+.margin-null{
+    margin: 0 !important;
+}
+
 @media only screen and (max-width: 770px){
     .main{
         width: 60%;
