--- a/static/style.css
+++ b/static/style.css
@@ -104,3 +104,9 @@ button:hover{
         width: 90%;
     }
 }
+
+@media only screen and (max-width: 321px){
+    .main{
+        width: 98%;
+    }
+}
