--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,8 @@
 
 html, body{
     margin: 0;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
     color: rgb(0, 49, 24);
     background-color: aquamarine;
     -ms-overflow-style: none;  /* IE and Edge */
@@ -21,7 +22,7 @@ html, body{
 
 header{font-size: 20px;}
 .table{padding: 15px;}
-.format-text{font-family: 'Open Sans', sans-serif;}
+.format-text{font-family: 'Oswald', sans-serif; font-weight: normal;}
 .light{color: rgba(0, 0, 0, 0.5) !important;}
 .align-center{text-align: center;}
 .align-right{text-align: right;}
