--- a/static/style.css
+++ b/static/style.css
@@ -10,11 +10,7 @@ html, body{
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
-
-html::-webkit-scrollbar{
-    display: none;
-}
-
+html::-webkit-scrollbar{display: none;}
 .main{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 10px;
@@ -36,14 +32,7 @@ header{font-size: 20px;}
 .vsmall{font-size: 10px !important;}
 .cross:after {content: ' \2716';font-size: 16px !important;color: rgba(0, 0, 0, 0.5) !important;}
 .flor-green {color: seagreen;}
-.policy>a{
-    color: rgb(0, 197, 85);
-    text-decoration: none;
-}
-.main-button{
-    background-color: rgba(0, 0, 0, 0.19) !important;
-    color: white !important;
-}
+.policy>a{color: rgb(0, 197, 85);text-decoration: none;}
+.main-button{background-color: rgba(0, 0, 0, 0.19) !important;color: white !important;}
 .main-button:hover{background-color: seagreen !important;}
-
 .payment-container{padding: 15px 30px 15px 15px;}
