--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,7 @@ html::-webkit-scrollbar{display: none;}
 
 header{font-size: 20px;}
 .table{padding: 15px;}
+.price-table{padding-bottom: 0;}
 .title
 {
     font-family: 'Oswald', sans-serif;
@@ -58,5 +59,5 @@ header{font-size: 20px;}
     background-size: cover;
     color: white;
     display: inline-block;
-    background-image: url("./media/9c841444ec7a198e3fc2da32077ea95b.jpg");
+    background-image: url("../media/9c841444ec7a198e3fc2da32077ea95b.jpg");
 }
